<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C7C1B3"
    tools:context=".data.model.fragmente.LoginFragment">

    <ImageView
        android:id="@+id/LogoIV"
        android:layout_width="277dp"
        android:layout_height="302dp"
        android:src="@drawable/design_ohne_titel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342" />

    <TextView
        android:id="@+id/AppNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/music_app"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/AnmeldenBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/anmelden"
        android:textColorLink="#325440"
        app:layout_constraintBottom_toTopOf="@+id/RegistrierenBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoIV"
        app:layout_constraintVertical_bias="0.828" />

    <Button
        android:id="@+id/RegistrierenBTN"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrieren"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogoIV"
        app:layout_constraintVertical_bias="0.537" />
</androidx.constraintlayout.widget.ConstraintLayout>